"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2006-12-23	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-63-chpsim-01-23-expr-04:
	  Refactored some of nonmeta_value_reference resolution code for
		better re-use, less duplication.  
	  Next: need nonmeta-resolution of nonmeta-indices.


2006-12-21	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-63-chpsim-01-23-expr-03:
	  More implementation of nonmeta_resolve methods.  
		Added __nonmeta_resolve_rvalue helper method.  
		param consts' nonmeta_resolve_copy defers to base classes now.
		remaining undefined references to simple_nonmeta...
	  TODO: __unroll_resolve_rvalue and __nonmeta_resolve_rvalue:
		re-use them in common virtual function in meta-expr base class.
		Only override for const_collection and other aggregates.  
	  Consider returning plain values instead of ref-count ptrs
		in nonmeta resolution, even pool-allocated may bottleneck.


	* HACKT-00-01-04-main-00-80-63-chpsim-01-23-expr-02:
	  Re-wrote nonmeta_resolve_copy using unroll_resolve_copy
		for meta-expressions (compile-time), thereby reducing number
		of repetitive functions to implement.
	  Added top-level footprint reference to nonmeta_context_base for
		top-level value references, used to make an auxiliary
		unroll_context.  
	  Remaining: nonmeta expressions resolution (does not link).


2006-12-20	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-63-chpsim-01-23-expr-01:
	  This sub-branch is for implementing run-time expression resolution
		of nonmeta expressions and references.  
	  In this initial revision:
		we tentatively disable all uses of datastruct_tag because
		they were never well-defined (value semantics?) and inhibit
		implementation of nonmeta expression evaluation without
		ugly and meaningless hacks in traits classes.  