@@ -5,7 +5,7 @@
 		last revision of "Object/art_object_data_expr_base.h"
 		on the HACXX-00-01-04-main-00-48-connect-01 branch, 
 		branch revision -11.
-	$Id: int_expr.h,v 1.6.32.1.2.3 2006/12/22 06:14:23 fang Exp $
+	$Id: int_expr.h,v 1.6.32.1.2.4 2006/12/24 18:27:45 fang Exp $
  */
 
 #ifndef	__HAC_OBJECT_EXPR_INT_EXPR_H__
@@ -58,6 +58,7 @@ virtual	NONMETA_RESOLVE_RVALUE_INT_PROTO = 0;
 virtual	NONMETA_RESOLVE_COPY_INT_PROTO = 0;
 
 	NONMETA_RESOLVE_COPY_DATA_PROTO;
+	NONMETA_RESOLVE_COPY_INDEX_PROTO;
 #endif
 
 	// visitor disambiguation (doesn't matter)
