@@ -6,7 +6,7 @@
 		on the HACXX-00-01-04-main-00-48-connect-01 branch, 
 		branch revision -11.
 	TODO: future rename this file to nonmeta_expr_base.h
-	$Id: nonmeta_index_expr_base.h,v 1.6.32.1 2006/12/12 10:17:58 fang Exp $
+	$Id: nonmeta_index_expr_base.h,v 1.6.32.1.2.1 2006/12/24 18:27:48 fang Exp $
  */
 
 #ifndef	__HAC_OBJECT_EXPR_NONMETA_INDEX_EXPR_BASE_H__
@@ -14,12 +14,16 @@
 
 #include "util/persistent.h"
 #include "util/memory/pointer_classes_fwd.h"
+#include "Object/devel_switches.h"
 
 namespace HAC {
 namespace entity {
 struct expr_dump_context;
 class unroll_context;
+class nonmeta_context_base;
 class nonmeta_expr_visitor;
+class pint_const;
+class const_index;
 using std::ostream;
 using util::persistent;
 using util::memory::count_ptr;
@@ -44,6 +48,16 @@ virtual	ostream&
 		const count_ptr<const nonmeta_index_expr_base>&) const
 
 virtual	UNROLL_RESOLVE_COPY_NONMETA_INDEX_PROTO = 0;
+
+#if USE_NONMETA_RESOLVE
+/// return pint_const or const_index?
+#define	NONMETA_RESOLVE_COPY_INDEX_PROTO				\
+	count_ptr<const pint_const>					\
+	nonmeta_resolve_copy(const nonmeta_context_base&,		\
+		const count_ptr<const nonmeta_index_expr_base>&) const
+
+virtual	NONMETA_RESOLVE_COPY_INDEX_PROTO = 0;
+#endif
 
 virtual	void
 	accept(nonmeta_expr_visitor&) const = 0;
